--- a/SweepstakesProject/SweepstakesProject.csproj
+++ b/SweepstakesProject/SweepstakesProject.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Contestant.cs" />
     <Compile Include="ISweepStakesManager.cs" />
+    <Compile Include="MarketingFirm.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
     <Compile Include="UserInterface.cs" />
