Innit Simulation class.

--- a/SweepstakesProject/SweepstakesProject.csproj
+++ b/SweepstakesProject/SweepstakesProject.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Contestant.cs" />
     <Compile Include="ISweepStakesManager.cs" />
     <Compile Include="MarketingFirm.cs" />
+    <Compile Include="Simulation.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
     <Compile Include="UserInterface.cs" />
