Renamed SimulationFactory to SweepstakesManagerFactory.  Removed old class and created a new one in its place.

--- a/SweepstakesProject/SweepstakesProject.csproj
+++ b/SweepstakesProject/SweepstakesProject.csproj
@@ -47,7 +47,7 @@
     <Compile Include="ISweepStakesManager.cs" />
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Simulation.cs" />
-    <Compile Include="SimulationFactory.cs" />
+    <Compile Include="SweepstakesManagerFactory.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
     <Compile Include="UserInterface.cs" />
